--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="background-img"></div>
+            <div class="main-exchange-container__title">
+                <h2>Visibilizamos todas las tazas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las moneadas más importantes del mundo. </p>
+            </div>
+            <section class="main-tables-container">
+                <div>
+
+                </div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
