--- a/index.html
+++ b/index.html
@@ -66,7 +66,35 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main__product-detail">
+            <span class="potatoe"></span>
+            <div class="product-detail__title">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="product-cards__container">
+                <article class="product-detail__card">
+                    <span class="clock"></span>
+                    <p class="product-card__title">Tiempo real</p>
+                    <p class="product-card__body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+                <article class="product-detail__card">
+                    <span class="eye"></span>
+                    <p class="product-card__title">No hay tasas escondidas</p>
+                    <p class="product-card__body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product-detail__card">
+                    <span class="dollar"></span>
+                    <p class="product-card__title">Compara monedas</p>
+                    <p class="product-card__body">No más rumores, con Batabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product-detail__card">
+                    <span class="check"></span>
+                    <p class="product-card__title">Información confiable</p>
+                    <p class="product-card__body">Nuestas fuentas están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
