FInished plans section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header__title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header__button">Conoce nuestros planes <span></span></a>
+            <a href="#plans" class="header__button">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
@@ -50,7 +50,7 @@
                         <p> <b>Actualizado:</b> 19 de Julio 23:45</p>
                     </div>
                 </div>
-                <div class="commission-table">
+                <!-- <div class="commission-table">
                     <p class="commission__title">Comisiones</p>
                     <div class="commission-table__container">
                         <span class="commission__item commision__item--top-left">Bitrade</span>
@@ -63,7 +63,7 @@
                         <span class="commission__item commission__price commision__item--bottom-right">$ 14.96</span>
                     </div>
                     <p class="commission__date"><b>Actualizado:</b> 19 Julio 23:48</p>
-                </div>
+                </div> -->
             </section>
         </section>
         <section class="main__product-detail">
@@ -95,8 +95,44 @@
                 </article>
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="bitcoin__img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
+        <section id="plans" class="main__plans-container">
+            <div class="plans__title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans__card-container">
+                <article class="plans__card">
+                    <p class="card__recommended">Recomendado</p>
+                    <p class="card__title">Pago Anual</p>
+                    <p class="card__price"><span>$</span> 99</p>
+                    <p class="card__msg">*Ahorras $129 comparado al plan mensual.</p>
+                    <button>
+                        Escoger este <span class="arrow-right"></span>
+                    </button>
+                </article>
+                <article class="plans__card">
+                    <p class="card__recommended">Recomendado</p>
+                    <p class="card__title">Pago Anual</p>
+                    <p class="card__price"><span>$</span> 99</p>
+                    <p class="card__msg">*Ahorras $129 comparado al plan mensual.</p>
+                    <button>
+                        Escoger este <span class="arrow-right"></span>
+                    </button>
+                </article>
+                <article class="plans__card">
+                    <p class="card__recommended">Recomendado</p>
+                    <p class="card__title">Pago Anual</p>
+                    <p class="card__price"><span>$</span> 99</p>
+                    <p class="card__msg">*Ahorras $129 comparado al plan mensual.</p>
+                    <button>
+                        Escoger este <span class="arrow-right"></span>
+                    </button>
+                </article>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
