--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <article class="plans__card">
                     <p class="card__recommended">Recomendado</p>
                     <p class="card__title">Pago Anual</p>
-                    <p class="card__price"><span>$</span> 99</p>
+                    <p class="card__price"><span>$</span>99</p>
                     <p class="card__msg">*Ahorras $129 comparado al plan mensual.</p>
                     <button>
                         Escoger este <span class="arrow-right"></span>
@@ -116,7 +116,7 @@
                 <article class="plans__card">
                     <p class="card__recommended">Recomendado</p>
                     <p class="card__title">Pago Anual</p>
-                    <p class="card__price"><span>$</span> 99</p>
+                    <p class="card__price"><span>$</span>99</p>
                     <p class="card__msg">*Ahorras $129 comparado al plan mensual.</p>
                     <button>
                         Escoger este <span class="arrow-right"></span>
@@ -125,7 +125,7 @@
                 <article class="plans__card">
                     <p class="card__recommended">Recomendado</p>
                     <p class="card__title">Pago Anual</p>
-                    <p class="card__price"><span>$</span> 99</p>
+                    <p class="card__price"><span>$</span>99</p>
                     <p class="card__msg">*Ahorras $129 comparado al plan mensual.</p>
                     <button>
                         Escoger este <span class="arrow-right"></span>
@@ -134,6 +134,15 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section>
+            <a href="">Linkedin</a>
+            <a href="">Crunchbase</a>
+            <a href="">Hackernews</a>
+        </section>
+        <figure>
+            <img src="./assets/images/footer-logo.svg" alt="batabit logo">
+        </figure>
+    </footer>
 </body>
 </html>
