--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p> <b>Actualizado:</b> 19 de Julio 23:45</p>
                     </div>
                 </div>
-                <!-- <div class="commission-table">
+                <div class="commission-table">
                     <p class="commission__title">Comisiones</p>
                     <div class="commission-table__container">
                         <span class="commission__item commision__item--top-left">Bitrade</span>
@@ -58,12 +58,12 @@
                         <span class="commission__item">Bitpreco</span>
                         <span class="commission__item commission__price">$ 13.07</span>
                         <span class="commission__item">Novadax</span>
-                        <span class="commission__item commission__price commision__item--bottom-left">$ 13.15</span>
-                        <span class="commission__item">Coinext</span>
+                        <span class="commission__item commission__price">$ 13.15</span>
+                        <span class="commission__item commision__item--bottom-left">Coinext</span>
                         <span class="commission__item commission__price commision__item--bottom-right">$ 14.96</span>
                     </div>
                     <p class="commission__date"><b>Actualizado:</b> 19 Julio 23:48</p>
-                </div> -->
+                </div>
             </section>
         </section>
         <section class="main__product-detail">
